--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -9,6 +10,10 @@
         transition: all 0.2s;
         position: relative;
         font-size: $default-font-size;
+
+        //changes for the <button> element
+        border: none;
+        cursor: pointer;
     }
 
     &:hover {
@@ -20,7 +25,9 @@
         }
     }
 
-    &:active {
+    &:active,
+    &:focus {
+        outline: none;
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
     }
@@ -62,26 +69,25 @@
 }
 // Another button Starts from here
 
-.btn-text{
+.btn-text {
     &:link,
-    &:visited{
+    &:visited {
         font-size: $default-font-size;
         color: $color-primary;
         display: inline-block;
         text-decoration: none;
         border-bottom: 1px solid $color-primary;
         padding: 3px;
-        transition: all .3s;
+        transition: all 0.3s;
     }
-    &:hover{
+    &:hover {
         background-color: $color-primary;
         color: $color-white;
-        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+        box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
         transform: translateY(-3px);
     }
-    &:active{
-        box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    &:active {
+        box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
         transform: translateY(0px);
     }
 }
-
